# sql_connector

./: pyproject.toml
src/sqlconnector/: __init__.py  connector.py
